Added Final Update-1

--- a/WebContent/user.html
+++ b/WebContent/user.html
@@ -83,13 +83,12 @@
   <a href="Registration1.jsp">Sign Up</a>
   <a href="#">About</a>
 </div>
-<center><marquee behavior="alternate" style="background:RED"><h1>CUSTOMER MENU</h1></marquee></center>
+<marquee behavior="alternate" style="background:RED"><h1>CUSTOMER MENU</h1></marquee>
 <div class="container-fluid bg-1 text-center">
   <img src="tele.jpg" class="img-responsive img-rectangle" style="display:inline" width="30%" height="50%">
-  <center>
-  <a href="Login1.jsp" class="button">LOGIN</a>
-  <a href="Registration1.jsp" class="button">REGISTRATION FORM</a>
-  </center>
+  
+<h2 align="center">  <a href="Login1.jsp" class="button">LOGIN</a><a href="Registration1.jsp" class="button">REGISTRATION FORM</a> </h2>
+  
 
 </div>
 
