change in index and login and added payment history

--- a/WebContent/user.html
+++ b/WebContent/user.html
@@ -29,7 +29,7 @@
     background-color: #4CAF50;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 15px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -40,7 +40,7 @@
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: red;
 }
 
 .topnav a {
@@ -61,20 +61,14 @@
   background-color: #4CAF50;
   color: white;
 }
+body
+{
+background-image:url("pay1.jpg");
+}
 
   </style>
 </head>
-<body>
-    <!-- 
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="home.jsp">HOME</a></li>
-         <li><a href="Login1.jsp">RECHARGE</a></li>
-        <li><a href="Login1.jsp">USER LOGIN</a></li>
-        <li><a href="Registration1.jsp">SIGN UP</a></li>
-          <li><a href="#">CONTACT US</a></li>
-      </ul>
-    -->
+<body >
   <div class="topnav">
   <a  href="home.jsp">Home</a>
   <a href="Login1.jsp">Recharge</a>
@@ -83,23 +77,17 @@
   <a href="Registration1.jsp">Sign Up</a>
   <a href="#">About</a>
 </div>
-<marquee behavior="alternate" style="background:RED"><h1>CUSTOMER MENU</h1></marquee>
-<div class="container-fluid bg-1 text-center">
-  <img src="tele.jpg" class="img-responsive img-rectangle" style="display:inline" width="30%" height="50%">
-  
-<h2 align="center">  <a href="Login1.jsp" class="button">LOGIN</a><a href="Registration1.jsp" class="button">REGISTRATION FORM</a> </h2>
-  
-
+<h2 align="center"><font color="red">CUSTOMER MENU</font></h2>
+<div></div>
+<div>
 </div>
-
-<div class="container-fluid bg-3 text-center">    
-  <div class="row">
+<div class="container-fluid bg-1 text-center">
+<h3 align="center">  <a href="Login1.jsp" class="button">LOGIN</a>  <a href="Registration1.jsp" class="button">REGISTRATION FORM</a> </h3>
+</div>
+<div class="container-fluid bg-1 text-center">    
     <div class="col-sm-4"> 
       <p>This software is  protected by copyright laws</p>
     </div>
-    <div class="col-sm-4"> 
-    </div>
-  </div>
 </div>
 
 </body>
