some css code added

--- a/WebContent/user.html
+++ b/WebContent/user.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
   <title>Bootstrap Theme Simply Me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
   <style>
   .container-fluid {
       padding-top: 70px;
@@ -63,11 +64,19 @@
 }
 body
 {
-background-image:url("pay1.jpg");
+background-image:url("online3.jpg");
+ background-color: #cccccc;
+     height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
   </style>
 </head>
+
 <body >
   <div class="topnav">
   <a  href="home.jsp">Home</a>
@@ -77,12 +86,10 @@ background-image:url("pay1.jpg");
   <a href="Registration1.jsp">Sign Up</a>
   <a href="#">About</a>
 </div>
+
 <h2 align="center"><font color="red">CUSTOMER MENU</font></h2>
-<div></div>
-<div>
-</div>
 <div class="container-fluid bg-1 text-center">
-<h3 align="center">  <a href="Login1.jsp" class="button">LOGIN</a>  <a href="Registration1.jsp" class="button">REGISTRATION FORM</a> </h3>
+<h3 align="center">  <a href="Login1.jsp" class="button"><i class="fa fa-sign-in" aria-hidden="true"></i>  Sign In</a>  <a href="Registration1.jsp" class="button">Click Sign Up</a> </h3>
 </div>
 <div class="container-fluid bg-1 text-center">    
     <div class="col-sm-4"> 
